@@ -1,10 +1,13 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+4/9/15: Fixed Corrsearch3d so that Z slice limits picked in etomo will specify
+the proper Y range in the unrotated volume (In 4.7).
+
 4/9/15: Fixed Batchruntomo to scale fine alignment shifts by the prealign
 binning when combining with the prealign shifts (In 4.7).
 
 3/16/15: Fixed Ccderaser taking mean inside instead of outside boundary
-contours (in 4.7).
+contours (In 4.7).
 
 3/15/15: IMOD_4-7-14
 3/15/15: Fixed fixCygPython.sh to put Cygwin on path befor running commands 
